# Quadmage

./: .gitignore  README.md  build.gradle.kts  package-lock.json  package.json  quasar.config.js  settings.gradle.kts  tsconfig.json
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src-wasm/src/analysis/: analyzer.rs  mod.rs  quadtree.rs
src-wasm/src/render/: mod.rs
src/boot/: wasm.ts
src/layouts/: MainLayout.vue
src/main/kotlin/dev/sharpwave/quadmage/: Main.kt
src/main/kotlin/dev/sharpwave/quadmage/core/: Resources.kt
src/main/kotlin/dev/sharpwave/quadmage/gui/components/: DescribedInputWrapper.kt  Draggable.kt  FileDialog.kt  Scalable.kt  Zoomable.kt
src/main/kotlin/dev/sharpwave/quadmage/gui/core/: EventLocker.kt  GlobalProvidables.kt
src/main/kotlin/dev/sharpwave/quadmage/gui/core/misc/: FileDropTarget.kt
src/main/kotlin/dev/sharpwave/quadmage/gui/core/model/: ContentState.kt
src/main/kotlin/dev/sharpwave/quadmage/gui/screen/: EditorScreen.kt  StartScreen.kt
src/main/kotlin/dev/sharpwave/quadmage/gui/theme/: Color.kt  Resources.kt  Theme.kt  Type.kt
src/main/kotlin/dev/sharpwave/quadmage/gui/util/: Bitmap.kt  General.kt
src/main/kotlin/dev/sharpwave/quadmage/image/: ImageAnalyser.kt  ProcessedImage.kt  TreePainter.kt
src/main/kotlin/dev/sharpwave/quadmage/image/data/: ColorCompressorQuad.kt  SharedTreeMeta.kt
src/main/kotlin/dev/sharpwave/quadmage/image/effect/: EffectManager.kt
src/main/kotlin/dev/sharpwave/quadmage/util/: PathUtils.kt
src/pages/: AppIndex.vue
src/router/: routes.ts
(+10 files in other folders)
