[package]
name = "quadmage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
wasm-logger = "0.2.0"
log = "0.4"
wgpu = { version = "0.12", default_features = false, features = ["webgl"] }
pollster = "0.2"
web-sys = { version = "0.3.56", default_features = false, features = ["Window", "Document", "Element", "HtmlCanvasElement", "Node", "CssStyleDeclaration", "File", "FileReader"]}
js-sys = "0.3.56"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.29"
euclid = "^0.22.6"
palette = "0.6.0"
wasm-bindgen = "0.2.79"
lazy_static = "1.4.0"
observable-rs = "0.0.2"

[profile.release]
lto = true
